<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<resources>
    <string name="app_name">pbdv_clinic_app</string>
    <string name="loading">Loading…</string>
    <string name="no_internet_connection">No internet connection!</string>
<string name="lbl_email">Email</string>
<string name="msg_feedback_submit">Feedback submitted successfully!</string>
<string name="lbl_search">Search...</string>
<string name="msg_view_appointment">View appointment details</string>
<string name="lbl_last_name">Last Name</string>
<string name="lbl_email_address">Email Address</string>
<string name="msg_confirm_passwor">Confirm Password</string>
<string name="lbl_medical_record">Medical Record</string>
<string name="msg_provide_app_fee">Provide app feedback</string>
<string name="lbl_submit_feedback">Submit feedback</string>
<string name="msg_appointment_boo">Appointment booked successfully!</string>
<string name="msg_additional_note">Additional Notes</string>
<string name="lbl_first_name">First Name</string>
<string name="msg_appointment_dat">Appointment Date</string>
<string name="lbl_appointments">Appointments</string>
<string name="lbl_clinics">Clinics</string>
<string name="lbl_send_email">Send Email</string>
<string name="lbl_go_to_login">Go to Login</string>
<string name="lbl_qualification">Qualification</string>
<string name="lbl_feedback">Feedback</string>
<string name="msg_forgot_your_pas">Forgot your password?</string>
<string name="msg_staff_student_n">Staff/Student Number</string>
<string name="lbl_clinic">Clinic</string>
<string name="lbl_sign_in"> Sign in</string>
<string name="lbl_cool">Cool!</string>
<string name="msg_please_fill_in">Please fill in the email that you used to register. You will be sent an email with instructions on how to reset your password.</string>
<string name="lbl_email_sent">Email Sent!</string>
<string name="lbl_sign_in2">Sign In</string>
<string name="lbl_time">Time</string>
<string name="lbl_user_profile">User profile</string>
<string name="lbl_codesurfers">© Codesurfers</string>
<string name="lbl_sign_up">Sign Up</string>
<string name="lbl_password">Password</string>
<string name="msg_registered_succ">Registered successfully!</string>
<string name="msg_forgot_password">Forgot password?</string>
<string name="msg_an_email_has_be">An email has been sent to your email address with instructions on how to reset your password. If you don\u2019t receive it within a few minutes, please check that you used the e-mail address for your Epic Games account and try again or contact us for help.</string>
<string name="lbl_register">Register</string>
<string name="lbl_student_number">Student Number</string>
<string name="msg_cancel_appointm">cancel appointment</string>
<string name="msg_schedule_an_app">Schedule an appointment</string>
<string name="msg_reschedule_appo">reschedule appointment</string>
<string name="msg_remember_your_p">Remember your password?</string>
<string name="msg_book_appointmen">Book appointment</string>
</resources>
