<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">
    <data/>
    <LinearLayout android:gravity="start"
        android:id="@+id/linearResetPassword"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical" style="@style/groupStylegray_901">
        <LinearLayout android:gravity="start"
            android:id="@+id/linearColumnforgotyourpas"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:orientation="vertical" style="@style/groupStylewhite_A700">
            <TextView android:ellipsize="end"
                android:id="@+id/txtForgotyourpas"
                android:layout_gravity="center_horizontal"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_34pxh"
                android:layout_marginStart="@dimen/_34pxh"
                android:layout_marginTop="@dimen/_62pxv"
                android:layout_width="wrap_content"
                android:singleLine="true"
                android:text="@string/msg_forgot_your_pas"
                style="@style/txtIntersemibold16" tools:text="@string/msg_forgot_your_pas"/>
            <TextView android:gravity="center_horizontal"
                android:id="@+id/txtDescription"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_34pxh"
                android:layout_marginStart="@dimen/_34pxh"
                android:layout_marginTop="@dimen/_15pxv"
                android:layout_width="match_parent"
                android:text="@string/msg_please_fill_in"
                style="@style/txtInterlight16" tools:text="@string/msg_please_fill_in"/>
            <TextView android:ellipsize="end"
                android:id="@+id/txtEmailAddress"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_35pxh"
                android:layout_marginStart="@dimen/_35pxh"
                android:layout_marginTop="@dimen/_55pxv"
                android:layout_width="wrap_content"
                android:singleLine="true"
                android:text="@string/lbl_email_address"
                style="@style/txtIntersemibold16" tools:text="@string/lbl_email_address"/>

            <EditText
                android:id="@+id/resetEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="32dp"
                android:layout_marginRight="32dp"
                android:ems="10"
                android:inputType="textEmailAddress" />

            <androidx.appcompat.widget.AppCompatButton
                android:ellipsize="none" android:gravity="center"
                android:id="@+id/btnSendEmail"
                android:layout_gravity="center_horizontal"
                android:layout_height="@dimen/_48pxv"
                android:layout_marginEnd="@dimen/_34pxh"
                android:layout_marginStart="@dimen/_34pxh"
                android:layout_marginTop="@dimen/_18pxv"
                android:layout_width="@dimen/_127pxh"
                android:paddingBottom="@dimen/_11pxv"
                android:paddingEnd="@dimen/_10pxh"
                android:paddingStart="@dimen/_10pxh"
                android:paddingTop="@dimen/_11pxv"
                android:singleLine="true"
                android:text="@string/lbl_send_email"
                android:textAllCaps="false" style="@style/btnOutline" tools:text="@string/lbl_send_email"/>
            <LinearLayout android:gravity="start"
                android:id="@+id/linearRowrememberyourp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_104pxv"
                android:layout_marginEnd="@dimen/_33pxh"
                android:layout_marginStart="@dimen/_34pxh"
                android:layout_marginTop="@dimen/_18pxv"
                android:layout_width="match_parent"
                android:orientation="horizontal" style="@style/groupStylewhite_A700">
                <TextView android:ellipsize="end"
                    android:id="@+id/txtRememberyourp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_8pxv"
                    android:layout_marginStart="@dimen/_10pxh"
                    android:layout_marginTop="@dimen/_10pxv"
                    android:layout_weight="0.79"
                    android:layout_width="0dp" android:singleLine="true"
                    android:text="@string/msg_remember_your_p"
                    style="@style/txtInterregular16" tools:text="@string/msg_remember_your_p"/>

                <TextView
                    android:id="@+id/btnRedirectToSignIn"
                    style="@style/txtInterbold16"
                    textUnderline="true"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_13pxh"
                    android:layout_marginTop="@dimen/_10pxv"
                    android:layout_marginEnd="@dimen/_10pxh"
                    android:layout_marginBottom="@dimen/_8pxv"
                    android:layout_weight="0.21"
                    android:clickable="true"
                    android:ellipsize="end"
                    android:singleLine="true"
                    android:text="@string/lbl_sign_in"
                    tools:text="@string/lbl_sign_in" />
            </LinearLayout>
        </LinearLayout>
        <LinearLayout android:gravity="center_horizontal"
            android:id="@+id/linearColumncodesurfers"
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:orientation="vertical" style="@style/groupStylegray_901">
            <TextView android:ellipsize="end" android:gravity="start"
                android:id="@+id/txtCodesurfers"
                android:layout_height="match_parent"
                android:layout_marginBottom="@dimen/_20pxv"
                android:layout_marginEnd="@dimen/_30pxh"
                android:layout_marginStart="@dimen/_30pxh"
                android:layout_marginTop="@dimen/_38pxv"
                android:layout_width="match_parent"
                android:singleLine="true"
                android:text="@string/lbl_codesurfers"
                style="@style/txtIntersemibold20_1" tools:text="@string/lbl_codesurfers"/>
        </LinearLayout>
    </LinearLayout>
</layout>
