<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">
    <data/>
    <LinearLayout android:gravity="start"
        android:id="@+id/linearPasswordReset"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical" style="@style/groupStylegray_901">
        <LinearLayout android:gravity="center_horizontal"
            android:id="@+id/linearColumnemailsent"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:orientation="vertical" style="@style/groupStylewhite_A700">
            <TextView android:ellipsize="end"
                android:id="@+id/txtEmailSent"
                android:layout_gravity="center_horizontal"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_38pxh"
                android:layout_marginStart="@dimen/_38pxh"
                android:layout_marginTop="@dimen/_153pxv"
                android:layout_width="wrap_content"
                android:singleLine="true"
                android:text="@string/lbl_email_sent"
                style="@style/txtIntersemibold16" tools:text="@string/lbl_email_sent"/>
            <TextView android:gravity="center_horizontal"
                android:id="@+id/txtDescription"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_37pxh"
                android:layout_marginStart="@dimen/_38pxh"
                android:layout_marginTop="@dimen/_17pxv"
                android:layout_width="match_parent"
                android:text="@string/msg_an_email_has_be"
                style="@style/txtInterlight16" tools:text="@string/msg_an_email_has_be"/>
            <androidx.appcompat.widget.AppCompatButton
                android:ellipsize="none" android:gravity="center"
                android:id="@+id/btnGoToLogin"
                android:layout_gravity="center_horizontal"
                android:layout_height="@dimen/_48pxv"
                android:layout_marginBottom="@dimen/_113pxv"
                android:layout_marginEnd="@dimen/_38pxh"
                android:layout_marginStart="@dimen/_38pxh"
                android:layout_marginTop="@dimen/_46pxv"
                android:layout_width="@dimen/_131pxh"
                android:paddingBottom="@dimen/_11pxv"
                android:paddingEnd="@dimen/_10pxh"
                android:paddingStart="@dimen/_10pxh"
                android:paddingTop="@dimen/_11pxv"
                android:singleLine="true"
                android:text="@string/lbl_go_to_login"
                android:textAllCaps="false" style="@style/btnOutline" tools:text="@string/lbl_go_to_login"/>
        </LinearLayout>
        <LinearLayout android:gravity="center_horizontal"
            android:id="@+id/linearColumncodesurfers"
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:orientation="vertical" style="@style/groupStylegray_901">
            <TextView android:ellipsize="end" android:gravity="start"
                android:id="@+id/txtCodesurfers"
                android:layout_height="match_parent"
                android:layout_marginBottom="@dimen/_20pxv"
                android:layout_marginEnd="@dimen/_30pxh"
                android:layout_marginStart="@dimen/_30pxh"
                android:layout_marginTop="@dimen/_38pxv"
                android:layout_width="match_parent"
                android:singleLine="true"
                android:text="@string/lbl_codesurfers"
                style="@style/txtIntersemibold20_1" tools:text="@string/lbl_codesurfers"/>
        </LinearLayout>
    </LinearLayout>
</layout>
